--- a/pag.html
+++ b/pag.html
@@ -3,6 +3,15 @@
 	<title></title>
 </head>
 <body>
+	<div class="container">
+			<div class="row">
+				<div class=" col-xs-12 col-md-6 text-center">
+				<a href="http://www.mediotiempo.com"> <h2>Pagina de deportes</h2></a>
+				</div>
+				<div class=" col-xs-12 col-md-6 text-center">
+				<a href="http://enlapelea.com"><h2>Pagina de MMA</h2></a>
+				</div>
+			</div>
 
 </body>
 </html>
