--- a/pag.html
+++ b/pag.html
@@ -11,6 +11,9 @@
 				<div class=" col-xs-12 col-md-6 text-center">
 				<a href="http://enlapelea.com"><h2>Pagina de MMA</h2></a>
 				</div>
+				<div class=" col-xs-12 col-md-6 text-center">
+				<a href="http://i.imgur.com/iZ2BViT.jpg<"><h2>Algo...</h2></a>
+				</div>
 			</div>
 
 </body>
