--- a/pag.html
+++ b/pag.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title></title>
+	<title>practica </title>
+	<link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
 	<div class="container">
