--- a/pag.html
+++ b/pag.html
@@ -16,6 +16,9 @@
 				<div class=" col-xs-12 col-md-6 text-center">
 				<a href="http://i.imgur.com/iZ2BViT.jpg<"><h2>Algo...</h2></a>
 				</div>
+				<div class=" col-xs-12 col-md-6 text-center">
+				<a href="https://s-media-cache-ak0.pinimg.com/736x/58/23/f9/5823f919d71424cf92a6643ce381d6b4.jpg"><h2>Yao</h2></a>
+				</div>
 			</div>
 
 </body>
