--- a/pag.html
+++ b/pag.html
@@ -20,6 +20,13 @@
 				<a href="https://s-media-cache-ak0.pinimg.com/736x/58/23/f9/5823f919d71424cf92a6643ce381d6b4.jpg"><h2>Yao</h2></a>
 				</div>
 			</div>
+            <div class="row">
+               <div class="col-xs-12 text-center">
+        	<hr>
+        	Shit Corp &copy; jodiendo gente desde el 2011
+            </div>
+	  </div>
+	</div>
 
 </body>
 </html>
