--- a/pag.html
+++ b/pag.html
@@ -21,6 +21,12 @@
 				<a href="https://s-media-cache-ak0.pinimg.com/736x/58/23/f9/5823f919d71424cf92a6643ce381d6b4.jpg"><h2>Yao</h2></a>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-xs-12 col-md-6 text-center">
+					<h2>Mirame...</h2>
+					<img src="http://i.imgur.com/lGfSCmh.png" alt="" class="img-responsive">
+				</div>
+			</div>
 
 </body>
 </html>
