--- a/pag.html
+++ b/pag.html
@@ -32,7 +32,7 @@
   <div class="row">
                <div class="col-xs-12 text-center">
         	<hr>
-        	Shit Corp &copy; jodiendo gente desde el 2011
+        	Shit Corp &copy; jodiendo gente desde el 2011,  ps eh
             </div>
 	  </div>
 
