--- a/pag.html
+++ b/pag.html
@@ -4,41 +4,41 @@
 	<title>practica </title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 </head>
-<body>
+   <body background="img/fondo.jpg">
+	
+
 	<div class="container">
-			<div class="row">
+			<div class="row text-center" imagen-url="img/rios.jpg">
+				<h1><font color="silver"> pagina semi oficial de los mijos</font></h1>
 				<div class=" col-xs-12 col-md-6 text-center">
 				<a href="http://www.mediotiempo.com"> <h2>Pagina de deportes</h2></a>
 				</div>
 				<div class=" col-xs-12 col-md-6 text-center">
 				<a href="http://enlapelea.com"><h2>Pagina de MMA</h2></a>
 				</div>
+
 				<div class=" col-xs-12 col-md-6 text-center">
-
-
 				<a href="http://i.imgur.com/iZ2BViT.jpg<"><h2>Algo... *negro intensifies*</h2></a>
-
 				</div>
 				<div class=" col-xs-12 col-md-6 text-center">
 				<a href="https://s-media-cache-ak0.pinimg.com/736x/58/23/f9/5823f919d71424cf92a6643ce381d6b4.jpg"><h2>Yao</h2></a>
 				</div>
+
 				<div class="col-xs-12 col-md-6 text-center">
-					<h2>Mmmmmm</h2>
+					<h2><font color="silver">Mmmmmm</font></h2>
 					<img src="https://31.media.tumblr.com/9755f2eed1e2d51ac59b41a165128366/tumblr_inline_n0jiooz0wY1qcmiyg.png">
 				</div>
-			</div>
-			<div class="row">
 				<div class="col-xs-12 col-md-6 text-center">
-					<h2>Mirame...</h2>
+					<h2><font color="silver">Mirame...</font></h2>
 					<img src="http://i.imgur.com/lGfSCmh.png" alt="" class="img-responsive">
 				</div>
 			</div>
-  <div class="row">
-               <div class="col-xs-12 text-center">
-        	<hr>
-        	Shit Corp &copy; jodiendo gente desde el 2011,  ps eh
-            </div>
-	  </div>
+           <div class="row">
+                <div class="col-xs-12 text-center">
+        	     <hr>
+        	    <font color="red">Shit Corp &copy; jodiendo gente desde el 2011,  ps eh</font>
+                </div>
+	      </div>
 
 </body>
 </html>
