cambio en rama oscar

--- a/pag.html
+++ b/pag.html
@@ -30,7 +30,7 @@
 				</div>
 				<div class="col-xs-12 col-md-6 text-center">
 					<h2><font color="silver">Mirame...</font></h2>
-					<img src="http://i.imgur.com/lGfSCmh.png" alt="" class="img-responsive">
+					<a href="http://www.cuantocabron.com"><img src="http://i.imgur.com/lGfSCmh.png" alt="" class="img-responsive"></a>
 				</div>
 			</div>
            <div class="row">
