--- a/pag.html
+++ b/pag.html
@@ -8,8 +8,10 @@
 	
 
 	<div class="container">
-			<div class="row text-center" imagen-url="img/rios.jpg">
+			<div class="row" imagen-url="img/rios.jpg">
 				<h1><font color="silver"> pagina semi oficial de los mijos</font></h1>
+				<h2><font color="green">Esta es la rama de Alberto</font></h2>
+				<p><font color="white">Amo, Dios y lord de la rama.</font></p>
 				<div class=" col-xs-12 col-md-6 text-center">
 				<a href="http://www.mediotiempo.com"> <h2>Pagina de deportes</h2></a>
 				</div>
