--- a/pag.html
+++ b/pag.html
@@ -33,6 +33,9 @@
 					<img src="http://i.imgur.com/lGfSCmh.png" alt="" class="img-responsive">
 				</div>
 			</div>
+			<div class="row">
+<iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/DelhLppPSxY" frameborder="0"></iframe>
+			</div>
            <div class="row">
                 <div class="col-xs-12 text-center">
         	     <hr>
