--- a/pag.html
+++ b/pag.html
@@ -18,9 +18,6 @@
 				</div>
 
 				<div class=" col-xs-12 col-md-6 text-center">
-				<a href="http://i.imgur.com/iZ2BViT.jpg<"><h2>Algo... *negro intensifies*</h2></a>
-				</div>
-				<div class=" col-xs-12 col-md-6 text-center">
 				<a href="https://s-media-cache-ak0.pinimg.com/736x/58/23/f9/5823f919d71424cf92a6643ce381d6b4.jpg"><h2>Yao</h2></a>
 				</div>
 
@@ -30,8 +27,19 @@
 				</div>
 				<div class="col-xs-12 col-md-6 text-center">
 					<h2><font color="silver">Mirame...</font></h2>
-					<img src="http://i.imgur.com/lGfSCmh.png" alt="" class="img-responsive">
+					<a href="http://www.cuantocabron.com"><img src="http://i.imgur.com/lGfSCmh.png" alt=""></a>
 				</div>
+
+				<div class=" col-xs-4 col-md-4 text-center">
+				<a href="http://i.imgur.com/iZ2BViT.jpg<"><h2>Algo... *negro intensifies*</h2>
+				
+					<img src="img/4474284+_343f216b25fa0eec6afe4ee96dbb46a4.jpg" alt="" class="img-responsive">
+		
+				</a>
+				</div>
+			</div>
+			<div class="row">
+<iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/DelhLppPSxY" frameborder="0"></iframe>
 			</div>
            <div class="row">
                 <div class="col-xs-12 text-center">
